feat: add pagination support to product
